# sqlite

./: CMakeLists.txt
src/: build.c  main.c  sqlite.h.in  sqliteInt.h  test1.c  vdbe.c
test/: dbconfig1.test
